@@ -1,7 +1,8 @@
 git-annex (0.02) UNRELEASED; urgency=low
 
   * New fromkey subcommand, for registering urls, etc.
-  * Can scp annexed files from remotes.
+  * Can scp annexed files from remote hosts, and check remote hosts for
+    file content when dropping files.
 
  -- Joey Hess <joeyh@debian.org>  Thu, 21 Oct 2010 16:38:00 -0400
 
